refactor code,add semantic tags

--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <div class="sidebar">
-
-      <div class="top">
+    <nav class="sidebar">
+      <section class="top">
         <svg style="width:24px;height:24px" viewBox="0 0 24 24">
           <path fill="currentColor" d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
         </svg>
       Dashboard      
-      </div>
+      </section>
 
-      <div class="mid">
+      <section class="mid">
         <div class=" mid home">
           <svg style="width:24px;height:24px" viewBox="0 0 24 24">
             <path fill="currentColor" d="M12 5.69L17 10.19V18H15V12H9V18H7V10.19L12 5.69M12 3L2 12H5V20H11V14H13V20H19V12H22" />
@@ -55,9 +54,9 @@
           </svg>
         Communities
         </div>
-      </div>
+      </section>
 
-      <div class="bottom">
+      <section class="bottom">
         <div class="settings">
           <svg style="width:24px;height:24px" viewBox="0 0 24 24">
             <path fill="currentColor" d="M12,15.5A3.5,3.5 0 0,1 8.5,12A3.5,3.5 0 0,1 12,8.5A3.5,3.5 0 0,1 15.5,12A3.5,3.5 0 0,1 12,15.5M19.43,12.97C19.47,12.65 19.5,12.33 19.5,12C19.5,11.67 19.47,11.34 19.43,11L21.54,9.37C21.73,9.22 21.78,8.95 21.66,8.73L19.66,5.27C19.54,5.05 19.27,4.96 19.05,5.05L16.56,6.05C16.04,5.66 15.5,5.32 14.87,5.07L14.5,2.42C14.46,2.18 14.25,2 14,2H10C9.75,2 9.54,2.18 9.5,2.42L9.13,5.07C8.5,5.32 7.96,5.66 7.44,6.05L4.95,5.05C4.73,4.96 4.46,5.05 4.34,5.27L2.34,8.73C2.21,8.95 2.27,9.22 2.46,9.37L4.57,11C4.53,11.34 4.5,11.67 4.5,12C4.5,12.33 4.53,12.65 4.57,12.97L2.46,14.63C2.27,14.78 2.21,15.05 2.34,15.27L4.34,18.73C4.46,18.95 4.73,19.03 4.95,18.95L7.44,17.94C7.96,18.34 8.5,18.68 9.13,18.93L9.5,21.58C9.54,21.82 9.75,22 10,22H14C14.25,22 14.46,21.82 14.5,21.58L14.87,18.93C15.5,18.67 16.04,18.34 16.56,17.94L19.05,18.95C19.27,19.03 19.54,18.95 19.66,18.73L21.66,15.27C21.78,15.05 21.73,14.78 21.54,14.63L19.43,12.97Z" />
@@ -76,43 +75,43 @@
           </svg>
         Privacy
         </div>
-      </div>
-    </div>
+      </section>
+    </nav>
 
-    <div class="hero">
-      <div class="hero-top">
+    <header class="hero">
+      <section class="hero-top">
         <div class="search-box">
           <svg style="width:24px;height:24px" viewBox="0 0 24 24">
             <path fill="currentColor" d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z" />
           </svg>
         <div class="search-bar"></div>
         </div>
-      </div>
-      <div class="hero-notifs">
+      </section>
+      <section class="hero-notifs">
         <svg style="width:24px;height:24px" viewBox="0 0 24 24">
           <path fill="currentColor" d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" />
         </svg>
         <div class="avatar"></div>
           David Eniku
-      </div>
-    </div>
+      </section>
+      <section class="hero-bottom">
+        <div class="avatar"></div>
+        <div class="greeting">Welcome back,</div>
+        <div class="name">David Eniku</div>
+        <div class="hero-buttons">
+          <button type="submit">New</button>
+          <button type="submit">Upload</button>
+          <button type="submit">Share</button>
+        </div>
+      </section>
+    </header>
 
-    <div class="hero-bottom">
-      <div class="avatar"></div>
-      <div class="greeting">Welcome back,</div>
-      <div class="name">David Eniku</div>
-      <div class="hero-buttons">
-        <button type="submit">New</button>
-        <button type="submit">Upload</button>
-        <button type="submit">Share</button>
-      </div>
-    </div>
 
-    <div class="body">
-      <div class="project">
+    <main class="body">
+      <section class="project">
         <h2>Your Projects</h2>
         <div class="cards">
-          <div class="card">
+          <section class="card">
             <div class="text">
               <h1>Lorem Ipsum</h1>
               <p>Cupidatat sint in irure dolor anim quis. </p>
@@ -128,21 +127,21 @@
                 <path fill="currentColor" d="M6,2A3,3 0 0,1 9,5C9,6.28 8.19,7.38 7.06,7.81C7.15,8.27 7.39,8.83 8,9.63C9,10.92 11,12.83 12,14.17C13,12.83 15,10.92 16,9.63C16.61,8.83 16.85,8.27 16.94,7.81C15.81,7.38 15,6.28 15,5A3,3 0 0,1 18,2A3,3 0 0,1 21,5C21,6.32 20.14,7.45 18.95,7.85C18.87,8.37 18.64,9 18,9.83C17,11.17 15,13.08 14,14.38C13.39,15.17 13.15,15.73 13.06,16.19C14.19,16.62 15,17.72 15,19A3,3 0 0,1 12,22A3,3 0 0,1 9,19C9,17.72 9.81,16.62 10.94,16.19C10.85,15.73 10.61,15.17 10,14.38C9,13.08 7,11.17 6,9.83C5.36,9 5.13,8.37 5.05,7.85C3.86,7.45 3,6.32 3,5A3,3 0 0,1 6,2M6,4A1,1 0 0,0 5,5A1,1 0 0,0 6,6A1,1 0 0,0 7,5A1,1 0 0,0 6,4M18,4A1,1 0 0,0 17,5A1,1 0 0,0 18,6A1,1 0 0,0 19,5A1,1 0 0,0 18,4M12,18A1,1 0 0,0 11,19A1,1 0 0,0 12,20A1,1 0 0,0 13,19A1,1 0 0,0 12,18Z" />
               </svg>
             </div>
-          </div>
+          </section>
         </div>
-      </div>
+      </section>
 
-      <div class="side-body">
-        <div class="announcements">
+      <section class="side-body">
+        <section class="announcements">
           <h2>Announcements</h2>
           <div class="announcoments">
-            <div>Cillum ex amet dolor sunt ad esse nulla consectetur reprehenderit culpa tempor nisi.</div>
-            <div>Cillum ex amet dolor sunt ad esse nulla consectetur reprehenderit culpa tempor nisi.</div>
-            <div>Cillum ex amet dolor sunt ad esse nulla consectetur reprehenderit culpa tempor nisi.</div>
+            <p>Cillum ex amet dolor sunt ad esse nulla consectetur reprehenderit culpa tempor nisi.</p>
+            <p>Cillum ex amet dolor sunt ad esse nulla consectetur reprehenderit culpa tempor nisi.</p>
+            <p>Cillum ex amet dolor sunt ad esse nulla consectetur reprehenderit culpa tempor nisi.</p>
           </div>
-        </div>
+        </section>
 
-        <div class="trending">
+        <section class="trending">
           <h2>Trending</h2>
           <div class="profile">
             <div class="avatar"></div>
@@ -164,9 +163,9 @@
             <h1>Ore</h1>
             <p>@rezi</p>
           </div>
-        </div>
-      </div>
-    </div>
+        </section>
+      </section>
+    </main>
   </div>
 </body>
 </html>
