--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
   <div class="container">
     <nav class="sidebar">
       <section class="top">
-        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-          <path fill="currentColor" d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
-        </svg>
-      Dashboard     
+        <div class="dashboard">
+          <svg viewBox="0 0 24 24">
+            <path fill="currentColor" d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
+          </svg>
+        Dashboard     
+        </div>
       </section>
 
       <section class="mid">
-        <div class=" mid home">
+        <div class="home">
           <svg style="width:24px;height:24px" viewBox="0 0 24 24">
             <path fill="currentColor" d="M12 5.69L17 10.19V18H15V12H9V18H7V10.19L12 5.69M12 3L2 12H5V20H11V14H13V20H19V12H22" />
           </svg>
@@ -91,18 +93,16 @@
           <svg style="width:24px;height:24px" viewBox="0 0 24 24">
             <path fill="currentColor" d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" />
           </svg>
-          <div class="avatar">placeholder for image</div>
-          <p>David Eniku</p>
+          <div class="avatar">placeholder</div>
+          <p><strong>Tekyuma</strong></p>
         </div>
       </section>
       <section class="hero-bottom">
         <div class="hero-user">
-          <div class="avatar">
-            <p>placeholder for img</p>
-          </div>
+          <div class="avatar">placeholder</div>
           <div class="hero-user-home">
             <div class="greeting">Welcome back,</div>
-            <div class="user-name">David Eniku</div>
+            <div class="user-name"><strong>Tekyuma</strong></div>
           </div>
         </div>
         <div class="hero-button">
@@ -116,14 +116,14 @@
 
     <main class="body">
       <section class="project">
-        <h4>Your Projects</h4>
+        <h3>Your Projects</h3>
         <div class="cards">
           <section class="card">
             <div class="card-design"></div>
             <section class="card-body">
               <div class="text">
                 <h1>Lorem Ipsum</h1>
-                <p>Cupidatat sint in irure dolor anim quis. </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum vero repellendus quasi rem ratione quaerat aliquid pariatur unde similique quod ipsum ea iure non aperiam, quae nostrum? Sapiente, omnis laborum.</p>
               </div>
               <div class="icons">
                 <svg style="width:24px;height:24px" viewBox="0 0 24 24">
@@ -144,7 +144,7 @@
             <section class="card-body">
               <div class="text">
                 <h1>Lorem Ipsum</h1>
-                <p>Cupidatat sint in irure dolor anim quis. </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum vero repellendus quasi rem ratione quaerat aliquid pariatur unde similique quod ipsum ea iure non aperiam, quae nostrum? Sapiente, omnis laborum.</p>
               </div>
               <div class="icons">
                 <svg style="width:24px;height:24px" viewBox="0 0 24 24">
@@ -165,7 +165,7 @@
             <section class="card-body">
               <div class="text">
                 <h1>Lorem Ipsum</h1>
-                <p>Cupidatat sint in irure dolor anim quis. </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum vero repellendus quasi rem ratione quaerat aliquid pariatur unde similique quod ipsum ea iure non aperiam, quae nostrum? Sapiente, omnis laborum.</p>
               </div>
               <div class="icons">
                 <svg style="width:24px;height:24px" viewBox="0 0 24 24">
@@ -186,7 +186,7 @@
             <section class="card-body">
               <div class="text">
                 <h1>Lorem Ipsum</h1>
-                <p>Cupidatat sint in irure dolor anim quis. </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum vero repellendus quasi rem ratione quaerat aliquid pariatur unde similique quod ipsum ea iure non aperiam, quae nostrum? Sapiente, omnis laborum.</p>
               </div>
               <div class="icons">
                 <svg style="width:24px;height:24px" viewBox="0 0 24 24">
@@ -207,7 +207,7 @@
             <section class="card-body">
               <div class="text">
                 <h1>Lorem Ipsum</h1>
-                <p>Cupidatat sint in irure dolor anim quis. </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum vero repellendus quasi rem ratione quaerat aliquid pariatur unde similique quod ipsum ea iure non aperiam, quae nostrum? Sapiente, omnis laborum.</p>
               </div>
               <div class="icons">
                 <svg style="width:24px;height:24px" viewBox="0 0 24 24">
@@ -228,7 +228,7 @@
             <section class="card-body">
               <div class="text">
                 <h1>Lorem Ipsum</h1>
-                <p>Cupidatat sint in irure dolor anim quis. </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum vero repellendus quasi rem ratione quaerat aliquid pariatur unde similique quod ipsum ea iure non aperiam, quae nostrum? Sapiente, omnis laborum.</p>
               </div>
               <div class="icons">
                 <svg style="width:24px;height:24px" viewBox="0 0 24 24">
@@ -248,7 +248,7 @@
 
       <section class="side-body">
         <section class="announce">
-          <h4>Announcements</h4>
+          <h3>Announcements</h3>
           <div class="announce-info">
             <p>Cillum ex amet dolor sunt ad esse nulla consectetur reprehenderit culpa tempor nisi.</p>
             <p>Cillum ex amet dolor sunt ad esse nulla consectetur reprehenderit culpa tempor nisi.</p>
@@ -257,36 +257,36 @@
         </section>
 
         <section class="trending">
-          <h4>Trending</h4>
+          <h3>Trending</h3>
           <div class="trending-profiles">
             <div class="profile">
-              <div class="avatar">placeholer for img</div>
+              <div class="avatar">placeholder</div>
               <div class="other-users">
-                <h1>Tiaoyama</h1>
+                <h4>Tiaoyama</h4>
                 <p>@memz</p>
               </div>
             </div>
   
             <div class="profile">
-              <div class="avatar">placeholer for img</div>
+              <div class="avatar">placeholder</div>
               <div class="other-users">
-                <h3>Ri</h3>
+                <h4>Ri</h4>
                 <p>@minnie</p>
               </div>
             </div>
   
             <div class="profile">
-              <div class="avatar">placeholer for img</div>
+              <div class="avatar">placeholder</div>
               <div class="other-users">
-                <h3>Gora</h3>
+                <h4>Gora</h4>
                 <p>@chickenboy</p>
               </div>
             </div>
   
             <div class="profile">
-              <div class="avatar">placeholer for img</div>
+              <div class="avatar">placeholder</div>
               <div class="other-users">
-                <h3>Ore</h3>
+                <h4>Ore</h4>
                 <p>@rezi</p>
               </div>
             </div>
