--- a/index.html
+++ b/index.html
@@ -111,13 +111,17 @@
           <svg style="width:24px;height:24px" viewBox="0 0 24 24">
             <path fill="currentColor" d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z" />
           </svg>
-          <div class="avatar">placeholder</div>
+          <div class="avatar">
+            <img src="/assets/imgs/shanks.jpg" alt="cute pic of Shanks from One Piece">
+          </div>
           <p><strong>Tekyuma</strong></p>
         </div>
       </section>
       <section class="hero-bottom">
         <div class="hero-user">
-          <div class="avatar">placeholder</div>
+          <div class="avatar">
+            <img src="/assets/imgs/shanks.jpg" alt="cute pic of shanks from One Piece">
+          </div>
           <div class="hero-user-home">
             <div class="greeting">Welcome back,</div>
             <div class="user-name"><strong>Tekyuma</strong></div>
@@ -278,7 +282,9 @@
           <h3>Trending</h3>
           <div class="trending-profiles">
             <div class="profile">
-              <div class="avatar">placeholder</div>
+              <div class="avatar">
+                <img src="assets/imgs/meliodas.jpg" alt="sus pic of Meliodas from seven deadly sins">
+              </div>
               <div class="other-users">
                 <h4>Tiaoyama</h4>
                 <p>@memz</p>
@@ -286,7 +292,9 @@
             </div>
   
             <div class="profile">
-              <div class="avatar">placeholder</div>
+              <div class="avatar">
+                <img src="/assets/imgs/hina.jpg" alt="cute pic of Hina from Tokyo Revengers">
+              </div>
               <div class="other-users">
                 <h4>Ri</h4>
                 <p>@minnie</p>
@@ -294,7 +302,9 @@
             </div>
   
             <div class="profile">
-              <div class="avatar">placeholder</div>
+              <div class="avatar">
+                <img src="/assets/imgs/babygoku.jpg" alt="cute pic of Goku from Dragon Ball">
+              </div>
               <div class="other-users">
                 <h4>Gora</h4>
                 <p>@chickenboy</p>
@@ -302,7 +312,9 @@
             </div>
   
             <div class="profile">
-              <div class="avatar">placeholder</div>
+              <div class="avatar">
+                <img src="/assets/imgs/hina2.jpg" alt="cute pic of Hina from Tokyo Revengers">
+              </div>
               <div class="other-users">
                 <h4>Ore</h4>
                 <p>@rezi</p>
