--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div class="avatar">
             <img src="/assets/imgs/shanks.jpg" alt="cute pic of Shanks from One Piece">
           </div>
-          <p><strong>Tekyuma</strong></p>
+          <p><strong>Anime<span>Hub</span></strong></p>
         </div>
       </section>
       <section class="hero-bottom">
@@ -138,13 +138,13 @@
 
     <main class="body">
       <section class="project">
-        <h3>Your Projects</h3>
+        <h3>Channels</h3>
         <div class="cards">
           <section class="card">
             <div class="card-design"></div>
             <section class="card-body">
               <div class="text">
-                <h1>Lorem Ipsum</h1>
+                <h1>Ongoing Anime (English Subs)</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum vero repellendus quasi rem ratione quaerat aliquid pariatur unde similique quod ipsum ea iure non aperiam, quae nostrum? Sapiente, omnis laborum.</p>
               </div>
               <div class="icons">
@@ -165,7 +165,7 @@
             <div class="card-design"></div>
             <section class="card-body">
               <div class="text">
-                <h1>Lorem Ipsum</h1>
+                <h1>Anime Series</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum vero repellendus quasi rem ratione quaerat aliquid pariatur unde similique quod ipsum ea iure non aperiam, quae nostrum? Sapiente, omnis laborum.</p>
               </div>
               <div class="icons">
@@ -186,7 +186,7 @@
             <div class="card-design"></div>
             <section class="card-body">
               <div class="text">
-                <h1>Lorem Ipsum</h1>
+                <h1>Anime Gallery</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum vero repellendus quasi rem ratione quaerat aliquid pariatur unde similique quod ipsum ea iure non aperiam, quae nostrum? Sapiente, omnis laborum.</p>
               </div>
               <div class="icons">
@@ -207,7 +207,7 @@
             <div class="card-design"></div>
             <section class="card-body">
               <div class="text">
-                <h1>Lorem Ipsum</h1>
+                <h1>Manwha Series</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum vero repellendus quasi rem ratione quaerat aliquid pariatur unde similique quod ipsum ea iure non aperiam, quae nostrum? Sapiente, omnis laborum.</p>
               </div>
               <div class="icons">
@@ -228,7 +228,7 @@
             <div class="card-design"></div>
             <section class="card-body">
               <div class="text">
-                <h1>Lorem Ipsum</h1>
+                <h1>Manga Gallery</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum vero repellendus quasi rem ratione quaerat aliquid pariatur unde similique quod ipsum ea iure non aperiam, quae nostrum? Sapiente, omnis laborum.</p>
               </div>
               <div class="icons">
@@ -249,7 +249,7 @@
             <div class="card-design"></div>
             <section class="card-body">
               <div class="text">
-                <h1>Lorem Ipsum</h1>
+                <h1>Manga Index</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum vero repellendus quasi rem ratione quaerat aliquid pariatur unde similique quod ipsum ea iure non aperiam, quae nostrum? Sapiente, omnis laborum.</p>
               </div>
               <div class="icons">
@@ -270,16 +270,16 @@
 
       <section class="side-body">
         <section class="announce">
-          <h3>Announcements</h3>
+          <h3>Anime News</h3>
           <div class="announce-info">
-            <p>Cillum ex amet dolor sunt ad esse nulla consectetur reprehenderit culpa tempor nisi.</p>
-            <p>Cillum ex amet dolor sunt ad esse nulla consectetur reprehenderit culpa tempor nisi.</p>
-            <p>Cillum ex amet dolor sunt ad esse nulla consectetur reprehenderit culpa tempor nisi.</p>
+            <p>ONE PIECE FILM RED - New Character Designs for the Marines, World Government.</p>
+            <p>Gon and Killua's voice actors posted this images after the news of return of the Hunter x Hunter manga</p>
+            <p>Soredemo Ayumu wa Yosetekuru New Visual</p>
           </div>
         </section>
 
         <section class="trending">
-          <h3>Trending</h3>
+          <h3>Quick Add</h3>
           <div class="trending-profiles">
             <div class="profile">
               <div class="avatar">
